@@ -15,6 +15,8 @@ TODO :
    (*) of course only for shell sessions 
  - JSCH updated to 0.1.48
  - md5sum method added to SSHTools object
+ - manage connect timeout (30s) and general socket timeout (default = 5mn)
+   => When using REPL, this general socket timeout must be raised to a higher value
 
 ------------------------------------------------------------------
 0.7.4 
